[package]
name = "clamhydradragonav"
version = "0.0.1"
description = "ClamHydraDragonAV"
authors = ["Emirhan Ucan"]
license = "GPL-2.0"
repository = "https://github.com/HydraDragonAntivirus/ClamHydraDragonAV"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
